src/css/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
    @apply font-nunito;
    @apply text-black;
    @apply bg-body;
}

.container {
    @apply mx-20;
}

@media (min-width: 1024px) {
    .active {
        color: #000;
    }
    .active::after {
        content: "";
        display: block;
        width: 50%;
        margin: 0 auto;
        height: 2px;
        background-color: #000;
    }
}

h1,
h2,
h3,
h4,
h5 {
    @apply font-fraunces subpixel-antialiased;
}

h1 {
    @apply text-4xl md:text-5xl;
}
h2 {
    @apply text-3xl md:text-4xl;
}
h3 {
    font-size: 32px;
}
h4 {
    @apply text-2xl;
}
h5 {
    @apply text-xl;
}
p {
    line-height: 24px;
    @apply text-black-secondary subpixel-antialiased;
}

